# realtime_hair_wgpu

./: Cargo.toml  Makefile  README.md
assets/shaders/: instancing.wgsl
src/: main.rs
src/hair_simulation/: conversion.rs  data.rs  mod.rs  simulation.rs
src/hair_simulation/pipeline/: mod.rs
src/hair_simulation/pipeline/der/: mod.rs
src/hair_simulation/pipeline/der/methods/: mod.rs
src/hair_simulation/pipeline/der/utils/: mod.rs
src/my_rt_hair/: data.rs  mod.rs
src/physic_simulation/: communication.rs  control.rs  data.rs  display.rs  interfaces.rs  mod.rs  scheduler.rs  simulation.rs
src/plugins/: mod.rs
src/plugins/instanced_mesh/: mod.rs
src/plugins/on_screen_fps/: mod.rs
src/plugins/physic_simulation/: communication.rs  control.rs  data.rs  display.rs  mod.rs  scheduler.rs  simulation.rs  traits.rs
src/plugins/web_fullscreen/: mod.rs
src/utils/: mod.rs
src/utils/instanced_mesh/: mod.rs
