[package]
name = "realtime_hair_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2" }
crossbeam-channel = "0.5.12"
gloo-events = "0.2.0"
web-sys = { version = "0.3.69", features = ["Element", "Document", "Window"] }
